--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,7 +33,7 @@ jobs:
     - name: Build, tag, and push Docker image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ matrix.service }}
+        ECR_REPOSITORY: roboshop-${{ matrix.service }}
         IMAGE_TAG: ${{ github.sha }}
       run: |
         cd source-code/${{ matrix.service }}
