fix: use correct startup command for payment

--- a/source-code/payment/Dockerfile
+++ b/source-code/payment/Dockerfile
@@ -8,8 +8,7 @@ RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
 WORKDIR /app
 COPY --from=builder /root/.local /home/roboshop/.local
 COPY *.py *.ini /app
-ENV PATH=/home/roboshop/.local/bin:$PATH 
+ENV PATH=/home/roboshop/.local/bin:$PATH
 USER roboshop
 EXPOSE 8080
-CMD ["python","payment.py"
-
+CMD ["uwsgi", "--ini", "payment.ini"]
