fix: set correct permissions for python packages

--- a/source-code/payment/Dockerfile
+++ b/source-code/payment/Dockerfile
@@ -6,7 +6,7 @@ RUN pip install --user -r requirements.txt
 FROM python:3.9-alpine
 RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
 WORKDIR /app
-COPY --from=builder /root/.local /home/roboshop/.local
+COPY --from=builder --chown=roboshop:roboshop /root/.local /home/roboshop/.local
 COPY *.py *.ini /app
 ENV PATH=/home/roboshop/.local/bin:$PATH
 USER roboshop
