--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -38,18 +38,18 @@ jobs:
 
     # 2. SAST SCAN (SonarCloud - Code Quality)
     # UNCOMMENT THIS BLOCK AFTER ADDING SONAR_TOKEN
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@master
-      continue-on-error: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        projectBaseDir: source-code/${{ matrix.service }}
-        args: >
-          -Dsonar.organization=srinualajangi
-          -Dsonar.projectKey=srinualajangi_devsecops
-          -Dsonar.branch.name=main
+    #- name: SonarCloud Scan
+    #  uses: SonarSource/sonarcloud-github-action@master
+    #  continue-on-error: true
+    # env:
+    #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    # with:
+    #   projectBaseDir: source-code/${{ matrix.service }}
+    #   args: >
+    #     -Dsonar.organization=srinualajangi
+    #     -Dsonar.projectKey=srinualajangi_devsecops
+    #     -Dsonar.branch.name=main
 
     # 3. AUTHENTICATION
     - name: Configure AWS Credentials
