--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [cart, payment, dispatch, catalogue, shipping]
+        service: [cart, payment, dispatch, shipping]
 
     steps:
     - name: Checkout Code
