feat: added catalogue,user,frontend to ci/cd pipeline

--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -17,15 +17,16 @@ jobs:
     name: Build & Deploy ${{ matrix.service }}
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        service: [cart, payment, dispatch, shipping]
+        service: [cart, payment, dispatch, user, catalogue, shipping, frontend]
 
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    # 1. SCA SCAN (Trivy - Vulnerabilities)
-    - name: Trivy Container Scan
+    # 1. SECURITY SCAN (Shift Left)
+    - name: Run Trivy Vulnerability Scanner
       uses: aquasecurity/trivy-action@master
       continue-on-error: true
       with:
@@ -36,22 +37,7 @@ jobs:
         ignore-unfixed: true
         severity: 'CRITICAL,HIGH'
 
-    # 2. SAST SCAN (SonarCloud - Code Quality)
-    # UNCOMMENT THIS BLOCK AFTER ADDING SONAR_TOKEN
-    #- name: SonarCloud Scan
-    #  uses: SonarSource/sonarcloud-github-action@master
-    #  continue-on-error: true
-    # env:
-    #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    # with:
-    #   projectBaseDir: source-code/${{ matrix.service }}
-    #   args: >
-    #     -Dsonar.organization=srinualajangi
-    #     -Dsonar.projectKey=srinualajangi_devsecops
-    #     -Dsonar.branch.name=main
-
-    # 3. AUTHENTICATION
+    # 2. AUTHENTICATION
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
@@ -63,7 +49,7 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    # 4. BUILD & PUSH
+    # 3. BUILD & PUSH
     - name: Build and Push Docker Image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -76,7 +62,7 @@ jobs:
         docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
-    # 5. DEPLOY TO DEV (Helm)
+    # 4. DEPLOY TO DEV
     - name: Update KubeConfig
       run: aws eks update-kubeconfig --name roboshop-cluster --region us-east-1
 
