--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
     paths-ignore:
       - 'README.md'
-      - 'helm/**'
+        #- 'helm/**'
   workflow_dispatch:
 
 permissions:
