--- a/helm/common/templates/service.yaml
+++ b/helm/common/templates/service.yaml
@@ -7,5 +7,5 @@ spec:
   selector:
     app: {{ .Values.component }}
   ports:
-  - port: {{ .Values.servic.port }}
+  - port: {{ .Values.service.port }}
     targetPort: {{ .Values.appPort }}
