--- a/source-code/frontend/roboshop.conf
+++ b/source-code/frontend/roboshop.conf
@@ -21,8 +21,6 @@ http {
   large_client_header_buffers 6 32k;
   client_max_body_size 100m;
 
-  # server_names_hash_bucket_size 64;
-  # server_name_in_redirect off;
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
 
@@ -30,7 +28,7 @@ http {
   # Logging Settings
   ##
   access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log debug; # change from debug to warn or error for production
+  error_log /var/log/nginx/error.log warn;
 
   ##
   # Gzip Settings
@@ -42,19 +40,11 @@ http {
   # Virtual Host Configs
   ##
 
-  include /etc/nginx/conf.d/*.conf;
-  include /etc/nginx/sites-enabled/*;
-
   server {
     listen       80;
     server_name  localhost;
 
     proxy_http_version 1.1;
-
-    #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
-    #error_log /dev/stdout debug;
-    #rewrite_log on;
 
     location / {
         root   /usr/share/nginx/html;
@@ -68,16 +58,21 @@ http {
         try_files $uri /images/placeholder.png;
     }
 
-    #error_page  404              /404.html;
+    # API PROXY CONFIGURATION - routes to backend services
+    location /api/catalogue/ { proxy_pass http://catalogue:8080/; }
+    location /api/user/ { proxy_pass http://user:8080/; }
+    location /api/cart/ { proxy_pass http://cart:8080/; }
+    location /api/shipping/ { proxy_pass http://shipping:8080/; }
+    location /api/payment/ { proxy_pass http://payment:8080/; }
 
-    # redirect server error pages to the static page /50x.html
-    #
+    location /health {
+      stub_status on;
+      access_log off;
+    }
+
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
-
-
-}
-
+  }
 }
